@@ -1,20 +1,21 @@
 SMODS.Joker {
-    key = "easy_a",
-    order = 253,
+    key = "cruella",
+    order = 255,
     generate_ui = Kino.generate_info_ui,
     config = {
         extra = {
-            chips = 50
+            cur_chance = 1,
+            chance = 4
         }
     },
-    rarity = 1,
+    rarity = 2,
     atlas = "kino_atlas_8",
-    pos = { x = 0, y = 0},
-    cost = 3,
+    pos = { x = 2, y = 0},
+    cost = 5,
     blueprint_compat = true,
     perishable_compat = true,
     kino_joker = {
-        id = 37735,
+        id = 337404,
         budget = 0,
         box_office = 0,
         release_date = "1900-01-01",
@@ -26,28 +27,21 @@ SMODS.Joker {
         directors = {},
         cast = {},
     },
-    pools, k_genre = {"Comedy"},
+    pools, k_genre = {"Comedy","Crime", "Adventure"},
 
     loc_vars = function(self, info_queue, card)
         return {
             vars = {
-                card.ability.extra.chips
+
             }
         }
     end,
     calculate = function(self, card, context)
-        -- Gives +50 chips for each Ace held in hand
+        -- 1/4 chance to give an edition to a random scoring card each hand
         if context.joker_main then
-            local _count = 0
-            for _, _card in ipairs(G.hand.cards) do
-                if _card:is_id() == 14 then
-                    _count = _count + 1
-                end
+            if pseudorandom("cruella") < (G.GAME.probabilities.chance * card.ability.extra.cur_chance) / card.ability.extra.chance then
+                -- give card an edition
             end
-
-            return {
-                chips = _count * card.ability.extra.chips
-            }
         end
     end
 }
