@@ -1,20 +1,20 @@
 SMODS.Joker {
-    key = "easy_a",
-    order = 253,
+    key = "iron_lady",
+    order = 262,
     generate_ui = Kino.generate_info_ui,
     config = {
         extra = {
-            chips = 50
+            x_mult = 1.5
         }
     },
     rarity = 1,
     atlas = "kino_atlas_8",
-    pos = { x = 0, y = 0},
-    cost = 3,
+    pos = { x = 3, y = 1},
+    cost = 4,
     blueprint_compat = true,
     perishable_compat = true,
     kino_joker = {
-        id = 37735,
+        id = 71688,
         budget = 0,
         box_office = 0,
         release_date = "1900-01-01",
@@ -26,28 +26,24 @@ SMODS.Joker {
         directors = {},
         cast = {},
     },
-    pools, k_genre = {"Comedy"},
+    pools, k_genre = {"Drama", "Biopic"},
 
     loc_vars = function(self, info_queue, card)
         return {
             vars = {
-                card.ability.extra.chips
+
             }
         }
     end,
     calculate = function(self, card, context)
-        -- Gives +50 chips for each Ace held in hand
         if context.joker_main then
-            local _count = 0
-            for _, _card in ipairs(G.hand.cards) do
-                if _card:is_id() == 14 then
-                    _count = _count + 1
+            for _, _pcard in ipairs(context.scoring_hand) do
+                if _pcard:get_id() == 12 then
+                    return {
+                        x_mult = card.ability.extra.x_mult
+                    }
                 end
             end
-
-            return {
-                chips = _count * card.ability.extra.chips
-            }
         end
     end
 }
